--- a/static/css/x.css
+++ b/static/css/x.css
@@ -86,20 +86,13 @@ body {
 
 
 /*
- * Placeholder dashboard ideas
+ * Chat area
  */
 
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
+.chat-box {
 }
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
+
+.chat-box .messages {
+  overflow: hidden;
+  height: 100px;
 }
