--- a/static/css/evil.css
+++ b/static/css/evil.css
@@ -96,6 +96,7 @@ body {
 .chat-box .messages {
     height: 100px;
     overflow-y: auto;
+    overflow-wrap: break-word;
     max-height: 100px;
     border: 1px solid rgb(238, 238, 238);
 }
