--- a/static/css/evil.css
+++ b/static/css/evil.css
@@ -1,106 +1,79 @@
-/*
- * Base structure
- */
-/* Move down content because we have a fixed navbar that is 50px tall */
+html {
+    overflow-y: scroll;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
 
 body {
-    padding-top: 50px;
-}
-/*
- * Global add-ons
- */
-
-.sub-header {
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
-}
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
-
-.navbar-fixed-top {
-    border: 0;
-}
-/*
- * Sidebar
- */
-/* Hide for mobile, show later */
-
-.sidebar {
-    display: none;
+    margin: 0 auto;
 }
 
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 20px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        /* Scrollable contents if viewport is shorter than content. */
-
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-    }
-}
-/* Sidebar navigation */
-
-.nav-sidebar {
-    margin-right: -21px;
-    /* 20px padding + 1px border */
-
-    margin-bottom: 20px;
-    margin-left: -20px;
-}
-
-.nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
-}
-
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-    color: #fff;
-    background-color: #428bca;
-}
-/*
- * Main content
- */
-
-.main {
+#sidebar {
+    position: fixed;
+    width: 100px;
     padding: 20px;
+    height: 100%;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
 }
 
-@media (min-width: 768px) {
-    .main {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
+#windows {
+    float: left;
+    margin-left: 140px;
+    width: 1105px;
+    padding: 20px;
+    padding-right: 0;
+    height: 100%;
 }
 
-.main .page-header {
-    margin-top: 0;
+#contacts {
+    list-style-type: none;
 }
-/*
- * Chat area
- */
 
-.chat-box {}
+.contact {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 
-.chat-box .messages {
-    height: 100px;
+.window {
+    width: 348px;
+    float: left;
+    margin-right: 20px;
+}
+
+.window .messages {
+    height: 220px;
     overflow-y: auto;
     overflow-wrap: break-word;
-    max-height: 100px;
     border: 1px solid rgb(238, 238, 238);
+    margin-bottom: 20px;
 }
 
-.chat-box .input-send {
+.window .input-send {
     width: 100%;
+    border: 1px solid rgb(238, 238, 238);
+    padding: 0;
+}
+
+.close {
+    float: right;
+    font-weight: bold;
+    color: #000000;
+    text-shadow: 0 1px 0 #ffffff;
+    opacity: 0.2;
+    filter: alpha(opacity=20);
+    text-decoration: none;
+}
+
+.close:hover {
+    color: #000000;
+    text-decoration: none;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    cursor: pointer;
 }
