--- a/static/css/evil.css
+++ b/static/css/evil.css
@@ -1,15 +1,5 @@
-html {
+body {
     overflow-y: scroll;
-}
-
-html,
-body {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    margin: 0 auto;
 }
 
 #sidebar {
@@ -44,10 +34,11 @@ body {
 }
 
 .messages {
-    height: 205px;
-    overflow-y: auto;
+    height: calc(8*1.5em + 2*5px);
+    overflow-y: scroll;
     overflow-wrap: break-word;
     border: 1px solid rgb(238, 238, 238);
+    border-right: 0;
     margin-bottom: 20px;
     list-style-type: initial;
     padding: 5px;
